Update SpotBugs annotations and refactor code
- Added SpotBugs annotations library (4.9.7) for enhanced static analysis
- Refactored Contact and ContactService classes for improved code quality
- Updated README with latest documentation
- Updated CHANGELOG with recent improvements